--- a/HaskellGraphs.cabal
+++ b/HaskellGraphs.cabal
@@ -15,25 +15,25 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     SimpleGraphs
   build-depends:       base >= 4.7 && < 5
+                     , fgl
   default-language:    Haskell2010
 
-executable HaskellGraphs-exe
+executable find-shortest-path
   hs-source-dirs:      app
-  main-is:             Main.hs
+  main-is:             ShortestPath.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , HaskellGraphs
   default-language:    Haskell2010
 
-test-suite HaskellGraphs-test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Spec.hs
+executable find-mst
+  hs-source-dirs:      app
+  main-is:             MinSpanningTree.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , HaskellGraphs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
