--- a/HaskellGraphs.cabal
+++ b/HaskellGraphs.cabal
@@ -16,7 +16,9 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     SimpleGraphs
+                     , ComplexGraphs
   build-depends:       base >= 4.7 && < 5
+                     , containers
                      , fgl
   default-language:    Haskell2010
 
