--- a/HaskellGraphs.cabal
+++ b/HaskellGraphs.cabal
@@ -17,9 +17,11 @@ library
   hs-source-dirs:      src
   exposed-modules:     SimpleGraphs
                      , ComplexGraphs
+                     , Tools
   build-depends:       base >= 4.7 && < 5
                      , containers
                      , fgl
+                     , split
   default-language:    Haskell2010
 
 executable find-shortest-path
@@ -33,6 +35,14 @@ executable find-shortest-path
 executable find-mst
   hs-source-dirs:      app
   main-is:             MinSpanningTree.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , HaskellGraphs
+  default-language:    Haskell2010
+
+executable solve-tools
+  hs-source-dirs:      app
+  main-is:             ToolsRunner.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , HaskellGraphs
